apps/jupyter/jupyter-web-app/upstream/overlays/istio/virtual-service.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: jupyter-web-app-jupyter-web-app
spec:
  parentRefs:
  - name: kubeflow-gateway
    namespace: kubeflow
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /jupyter/
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: x-forwarded-prefix
          value: /jupyter
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: jupyter-web-app-service
      port: 80
