apps/jupyter/jupyter-web-app/upstream/overlays/istio/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: jupyter-web-app
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/kubeflow/sa/kubeflow-gateway-istio
  selector:
    matchLabels:
      app: jupyter-web-app
